--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/react-router-dom": "^5.3.3",
     "babel": "^6.23.0",
+    "cors": "^2.8.5",
+    "dmx": "^0.2.5",
+    "express": "^4.18.2",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.9.0"
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.11.2",
+    "react-treebeard": "^3.2.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
