--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/p5": "^1.6.2",
     "@types/react-router-dom": "^5.3.3",
     "babel": "^6.23.0",
     "cors": "^2.8.5",
@@ -9,6 +10,7 @@
     "express": "^4.18.2",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.21",
+    "p5": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
