--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/dmx": "^0.2.0",
     "@types/express": "^4.17.17",
     "@types/p5": "^1.6.2",
     "@types/react-router-dom": "^5.3.3",
     "babel": "^6.23.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dmx": "^0.2.5",
+    "dmx-ts": "^0.3.0",
     "express": "^4.18.2",
     "node-sass": "^8.0.0",
-    "nodemon": "^2.0.21",
     "p5": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,12 +28,14 @@
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "nodemon": "^2.0.22",
     "nodemon-webpack-plugin": "^4.8.1",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
@@ -45,6 +49,7 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "start": "nodemon ./server/index.tsx"
   }
 }
